--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
-playwright==1.45.0
-pandas==2.2.2
-gspread==5.12.4
-google-auth==2.40.3
-google-auth-oauthlib==1.2.2
-selenium==4.21.0
-oauth2client
+pandas==1.5.0,<2.3.0
+gspread==5.10.0,<6.0.0
+requests==2.31.0,<3.0.0
+google-auth==2.22.0,<3.0.0
