--- a/.github/workflows/main_inbound.yaml
+++ b/.github/workflows/main_inbound.yaml
@@ -1,7 +1,9 @@
 name: main 
 
 on:
-  workflow_dispatch:        # Permite execução manual
+  workflow_dispatch:      # Permite execução manual
+  schedule:
+    - cron: '*/15 * * * *' # Roda a cada 15 min (se desejar)
 
 jobs:
   run-script:
@@ -9,25 +11,26 @@ jobs:
 
     steps:
       - name: Checkout do código
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Instalar Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-
-      - name: Restaurar hxh.json a partir do segredo
-        run: |
-          echo "$GCP_JSON_BASE64" | base64 -d > hxh.json
-        shell: bash
-        env:
-          GCP_JSON_BASE64: ${{ secrets.GCP_JSON_BASE64 }}
 
       - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
+          # Garanta que o 'requirements.txt' só tem o que precisa
+          # (pandas, gspread, requests, google-auth)
           pip install -r requirements.txt
-          playwright install chromium
-
+      
       - name: Executar o script
-        run: xvfb-run python main2.py
+        env:
+          # Este é o segredo com o JSON PURO colado
+          GCP_SA_KEY_JSON: ${{ secrets.GCP_SA_KEY_JSON }} 
+          # Não se esqueça do seu webhook
+          SEATALK_WEBHOOK_URL: ${{ secrets.SEATALK_WEBHOOK_URL }} 
+        
+        # Use o script que lê a variável de ambiente (o primeiro que fizemos)
+        run: python monitor_lts.py
