--- a/.github/workflows/main_inbound.yaml
+++ b/.github/workflows/main_inbound.yaml
@@ -3,7 +3,7 @@ name: main
 on:
   workflow_dispatch:      # Permite execução manual
   schedule:
-    - cron: '*/15 * * * *' # Roda a cada 15 min (se desejar)
+    - cron: '*/15 * * * *' # Roda a cada 15 min (UTC)
 
 jobs:
   run-script:
@@ -21,22 +21,17 @@ jobs:
       - name: Instalar dependências
         run: |
           python -m pip install --upgrade pip
-          # Garanta que o 'requirements.txt' só tem o que precisa
-          # (pandas, gspread, requests, google-auth)
           pip install -r requirements.txt
       
-      # --- PASSO DE DEBUG ADICIONADO ---
-      # Este passo vai mostrar todos os arquivos no seu repositório
+      # Este passo não é mais necessário, mas não faz mal deixá-lo
       - name: Listar arquivos no repositório
         run: ls -R
 
       - name: Executar o script
         env:
-          # Este é o segredo com o JSON PURO colado
           GCP_SA_KEY_JSON: ${{ secrets.GCP_SA_KEY_JSON }} 
-          # Não se esqueça do seu webhook
           SEATALK_WEBHOOK_URL: ${{ secrets.SEATALK_WEBHOOK_URL }} 
         
-        # Você provavelmente precisará mudar o nome do arquivo 'monitor_lts.py'
-        # para o nome real que aparecer no log do passo anterior
-        run: python monitor_lts.py
+        # --- CORREÇÃO AQUI ---
+        # Trocamos 'monitor_lts.py' pelo nome correto: 'main.py'
+        run: python main.py
