--- a/.github/workflows/main_expedicao.yaml
+++ b/.github/workflows/main_expedicao.yaml
@@ -5,7 +5,6 @@ on:
   workflow_dispatch: {}
   
   # Define um agendamento (a cada hora, no minuto 0)
-  # Isto já está correto para rodar "de 1 em 1 hora"
   schedule:
     - cron: '0 * * * *' 
 
@@ -33,8 +32,8 @@ jobs:
         # arquivo temporário chamado credentials.json no runner
         
         # --- CORREÇÃO AQUI ---
-        # Trocado 'echo' por 'printf' para evitar corromper o JSON
-        run: printf '%s' "${{ secrets.GOOGLE_CREDENTIALS }}" > credentials.json
+        # Trocado '%s' por '%b' para interpretar quebras de linha (ex: \n)
+        run: printf "%b" "${{ secrets.GOOGLE_CREDENTIALS }}" > credentials.json
 
       - name: 5. Rodar o Script Python
         # O script agora usará o credentials.json local
