--- a/.github/workflows/aviso_CPT.yaml
+++ b/.github/workflows/aviso_CPT.yaml
@@ -2,8 +2,8 @@ name: Fiscal CPT Iminente
 
 on:
   schedule:
-    - cron: '*/5 * * * *'   # A cada 5 minutos (mais preciso para pegar 30/20/10)
-  workflow_dispatch: {}
+    - cron: '*/10 * * * *'   # ← RODA A CADA 10 MINUTOS (0, 10, 20, 30, 40, 50)
+  workflow_dispatch: {}       # ← Permite execução manual pelo GitHub
 
 jobs:
   run-fiscal-script:
