--- a/.github/workflows/aviso_CPT.yaml
+++ b/.github/workflows/aviso_CPT.yaml
@@ -3,28 +3,28 @@ name: Fiscal CPT Iminente
 on:
   schedule:
     - cron: '*/10 * * * *'   # ← RODA A CADA 10 MINUTOS (0, 10, 20, 30, 40, 50)
-  workflow_dispatch: {}       # ← Permite execução manual pelo GitHub
+  workflow_dispatch: {}       # ← Permite execução manual pelo botão "Run workflow"
 
 jobs:
   run-fiscal-script:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: 📂 Checkout do código
         uses: actions/checkout@v4
 
-      - name: Setup Python
+      - name: 🐍 Configurar Python 3.10
         uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Install Dependencies
+      - name: 📦 Instalar dependências
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Run Fiscal Script
+      - name: 🚨 Rodar script de fiscalização de CPT
         run: python fiscal_cpt.py
         env:
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-          SEATALK_WEBHOOK_URL: ${{ secrets.SEATALK_WEBHOOK_URL }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          SEATALK_WEBHOOK_URL: ${{ secrets.SEATALK_WEBHOOK_URL }}
