--- a/.github/workflows/aviso_CPT.yaml
+++ b/.github/workflows/aviso_CPT.yaml
@@ -23,7 +23,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: 🚨 Rodar script de fiscalização de CPT
-        run: python fiscal_cpt.py
+        run: main.py
         env:
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
