--- a/.github/workflows/aviso_CPT.yaml
+++ b/.github/workflows/aviso_CPT.yaml
@@ -2,8 +2,8 @@ name: Fiscal CPT Iminente
 
 on:
   schedule:
-    - cron: '*/10 * * * *'   # ← RODA A CADA 10 MINUTOS
-  workflow_dispatch: {}       # ← Permite execução manual
+    - cron: '*/10 * * * *'
+  workflow_dispatch: {}
 
 jobs:
   run-fiscal-script:
@@ -11,11 +11,6 @@ jobs:
     steps:
       - name: 📂 Checkout do código
         uses: actions/checkout@v4
-
-      - name: 🔍 Debug - Listar arquivos (opcional, mas útil para evitar erros)
-        run: |
-          echo "📂 Arquivos no diretório:"
-          ls -la
 
       - name: 🐍 Configurar Python 3.10
         uses: actions/setup-python@v5
@@ -28,7 +23,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: 🚨 Rodar script de fiscalização de CPT
-        run: python main.py     # ← ALTERADO PARA main.py
+        run: python main.py
         env:
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
