--- a/.github/workflows/aviso_CPT.yaml
+++ b/.github/workflows/aviso_CPT.yaml
@@ -1,9 +1,7 @@
 name: Fiscal CPT Iminente
 
 on:
-  schedule:
-    - cron: '*/10 * * * *'
-  workflow_dispatch: {}
+  workflow_dispatch:      # Permite execução manual
 
 jobs:
   run-fiscal-script:
