--- a/.github/workflows/prioridadeout.yaml
+++ b/.github/workflows/prioridadeout.yaml
@@ -1,4 +1,4 @@
-name: Fiscal CPT Iminente
+name: prioridadeout
 
 on:
   workflow_dispatch:      # Permite execução manual
@@ -20,7 +20,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: 🚨 Rodar script de fiscalização de CPT
+      - name: 🚨 Rodar script de prioridadeout
         run: python main.py
         env:
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
